preencher o jogador /id

--- a/src/app/component/classificacao/classificacao.component.html
+++ b/src/app/component/classificacao/classificacao.component.html
@@ -28,8 +28,7 @@
             <button><img class="bdelete" src="./../assets/lixeira.png"></button>
       </tr>
     </table>
-        <!-- Pq essa porcaria não funciona nesse?
-           <a [routerLink]="['/classificacao']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a> -->
+           <a [routerLink]="['/classificacao']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
   </div>
 
 </body>
