--- a/src/app/component/jogadorlistar/jogadorlistar.component.html
+++ b/src/app/component/jogadorlistar/jogadorlistar.component.html
@@ -17,13 +17,14 @@
       <th></th>
     </tr>
     <!-- ngFor serve como um for, ele vai pegar todos os dados obtidos com o get e colocar em td's -->
-    <tr *ngFor="let cadajogador of jogadorList">      
+    <tr *ngFor="let cadajogador of jogadorList">
+        <!-- *ngFor="let cadaclube of clubeList">       -->
       <td>{{cadajogador.nome}}</td>
-      <td>{{cadajogador.idClube}}</td>
+      <td>{{cadajogador.idClube}} </td>
       <td>{{cadajogador.posicao}}</td>
       <td>{{cadajogador.peBom}}</td>
       <td><button><img class="bedit" src="./../assets/editar.png" (click)="showEdit(cadajogador)"></button>
-        <button><img class="bdelete" src="./../assets/lixeira.png"    (click)="delete(cadajogador.id)"></button></td>
+        <button><img class="bdelete" src="./../assets/lixeira.png" (click)="delete(cadajogador.id)"></button></td>
     </tr>
   </table>
   <a [routerLink]="['/jogador']"> <img class="botaomais" src="./../assets/addbutton.webp"> </a>
